# ragtag-mcp

./: .gitignore  README.md  example_rag_config.json  main.py  pyproject.toml  rag_config.json  requirements.txt
src/: brew_install.py  build_index.py  config-schema.json  config_parser.py  llm.py  serve_index.py
